ENG-4511 added fix for resourceDiskRootFolder and some changes from code reviews